# allergia_bot

./: .gitignore  pyproject.toml
bot/: config.py  main.py
bot/handlers/: registration.py  start.py
bot/keyboards/: default.py
bot/services/: django_api.py
